# otus-arch

./: CMakeLists.txt
.github/workflows/: Arch-1-TDD.yml  Arch-2-CosmoBattle.yml
Arch-1-TDD/: .gitignore  CMakeLists.txt
Arch-1-TDD/TDD/: CMakeLists.txt  Equation.cpp  Equation.h  EquationException.cpp  EquationException.h  main.cpp
Arch-1-TDD/Tests/: CMakeLists.txt  main.cpp
Arch-2-CosmoBattle/: .gitignore  CMakeLists.txt
Arch-2-CosmoBattle/CosmoBattle/: BurnFuelCommand.cpp  BurnFuelCommand.h  CMakeLists.txt  CheckFuelCommand.cpp  CheckFuelCommand.h  CommandQueue.cpp  CommandQueue.h  DataStructs.cpp  DataStructs.h  ExceptionCommand.cpp  ExceptionCommand.h  ExceptionHandler.cpp  ExceptionHandler.h  ICommand.h  LogCommand.cpp  LogCommand.h  MacroCommand.cpp  MacroCommand.h  MoveCommand.cpp  MoveCommand.h  MovingObject.cpp  MovingObject.h  RepeatCommand.cpp  RepeatCommand.h  RotateCommand.cpp  RotateCommand.h  RotatingObject.cpp  RotatingObject.h  Settings.cpp  Settings.h  UObject.cpp  UObject.h  UObjectException.cpp  UObjectException.h  VehicleObject.cpp  VehicleObject.h  main.cpp
Arch-2-CosmoBattle/Tests/: CMakeLists.txt  TestCheckFuelCommand.cpp  TestCommandQueue.cpp  TestExceptionCommand.cpp  TestExceptionHandler.cpp  TestFuelCommands.cpp  TestLogCommand.cpp  TestMacroCommand.cpp  TestMoveCommand.cpp  TestMovingObject.cpp  TestRepeatCommand.cpp  TestRotateCommand.cpp  TestRotatingObject.cpp  TestUObject.cpp  TestVector.cpp  main.cpp
